# atlus_website

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: black.yml  test.yml
atlus/: index.html  package-lock.json  package.json  tailwind.config.js
atlus/public/: robots.txt  sitemap.xml
atlus/src/: App.tsx  index.css  main.tsx
atlus/src/components/: CodeBlock.tsx  Footer.tsx  Intro.tsx  JsCode.tsx  LogoHeader.tsx  LogoSvg.tsx  Navbar.tsx  Perks.tsx  PipBlock.tsx
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  app.py  process.py  resources.py  test.py  test_app.py
ddns/: Dockerfile
update/: .dockerignore  Dockerfile  update.py
